# numeral-lib

./: .gitignore  CMakeLists.txt  numeral.c  numeral.h
